tests/sksl/errors/ModifiersInStruct.glsl
### Compilation failed:

error: 2: modifier 'const' is not permitted on a struct field
    const float a;
    ^^^^^
error: 3: modifier 'uniform' is not permitted on a struct field
    uniform int b;
    ^^^^^^^
error: 4: modifier 'flat' is not permitted on a struct field
    flat half4 c;
    ^^^^
error: 5: modifier 'noperspective' is not permitted on a struct field
    noperspective float4 d;
    ^^^^^^^^^^^^^
error: 6: modifier 'inout' is not permitted on a struct field
    inout bool e;
    ^^^^^
5 errors
